<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/my_notes"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/dummy_text"
                android:textColor="@color/colorLightText"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item1_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="6dp"
                            android:src="@drawable/smiley"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/itemTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16sp"
                            android:layout_marginEnd="40dp"
                            android:text="@string/title"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/imageView" />

                        <TextView
                            android:id="@+id/itemDescription"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/itemTitle"
                            app:layout_constraintStart_toStartOf="@+id/itemTitle"
                            app:layout_constraintTop_toBottomOf="@+id/itemTitle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item2_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="6dp"
                            android:src="@drawable/smiley"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/item2Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16sp"
                            android:layout_marginEnd="40dp"
                            android:text="@string/title"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="@+id/imageView2" />

                        <TextView
                            android:id="@+id/item2Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/item2Title"
                            app:layout_constraintStart_toStartOf="@+id/item2Title"
                            app:layout_constraintTop_toBottomOf="@+id/item2Title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item3_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="6dp"
                            android:src="@drawable/smiley"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/item3Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16sp"
                            android:layout_marginEnd="40dp"
                            android:text="@string/title"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="@+id/imageView3" />

                        <TextView
                            android:id="@+id/item3Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/item3Title"
                            app:layout_constraintStart_toStartOf="@+id/item3Title"
                            app:layout_constraintTop_toBottomOf="@+id/item3Title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item4_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="6dp"
                            android:src="@drawable/smiley"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/item4Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16sp"
                            android:layout_marginEnd="40dp"
                            android:text="@string/title"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="@+id/imageView4" />

                        <TextView
                            android:id="@+id/item4Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/item4Title"
                            app:layout_constraintStart_toStartOf="@+id/item4Title"
                            app:layout_constraintTop_toBottomOf="@+id/item4Title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorAccent"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:fabCradleVerticalOffset="6dp"
        app:menu="@menu/bottom_menu"

        app:navigationIcon="@drawable/ic_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_add"
        android:tint="@color/colorWhite"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="30dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>